--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "viem": "^2.15.1",
     "react-dom": "^18.3.1",
+    "sqlite3": "^5.1.6",
     "tinybase": "^5.1.0"
   }
 }
