--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "react": "^18.3.1",
     "viem": "^2.15.1",
-    "@sqlite.org/sqlite-wasm": "^3.46.0-build2",
+    "@vlcn.io/crsqlite-wasm": "^0.16.0"
     "react-dom": "^18.3.1",
     "tinybase": "^5.1.0"
   }
