--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "viem": "^2.15.1",
     "@vlcn.io/crsqlite-wasm": "^0.16.0",
     "react-dom": "^18.3.1",
+    "permissionless": "^0.1.42"
     "tinybase": "^5.1.0"
   }
 }
